[package]
name = "sysy-cmake-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
lalrpop = "0.19.7"
rand = "0.8.5"


[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
rand = "0.8.5"